--- a/public/style.css
+++ b/public/style.css
@@ -183,11 +183,11 @@ transform: rotate(0deg);
   background-color: red;
   position: absolute;
 }
-table {
+.table1 {
   border-collapse: collapse;
   border: 1px solid black;
 }
-th,td {
+.th1,.td1 {
   border: 1px solid black;
   width: 26rem;
 }
@@ -197,19 +197,29 @@ th,td {
   width: 100%;
 }
 
-#brukere td, #brukere th {
+#brukere .td1, #brukere .th1 {
   border: 1px solid #ddd;
   padding: 8px;
 }
 
-#brukere tr:nth-child(even){background-color: #f2f2f2;}
+#brukere .tr1:nth-child(even){background-color: #f2f2f2;}
 
-#brukere tr:hover {background-color: #ddd;}
+#brukere .tr1:hover {background-color: #ddd;}
 
-#brukere th {
+#brukere .th1 {
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: left;
   background-color: #4CAF50;
   color: white;
+}
+.blackbox {
+  width: 300px;
+  height: 300px;
+  background-color: black;
+}
+.button300{
+  width: 300px;
+  height: 50px;
+
 }
