--- a/public/style.css
+++ b/public/style.css
@@ -196,7 +196,7 @@ transform: rotate(0deg);
   position: absolute;
 }
 .ufoClass {
-  background-image: url("../src/Bilder/ufo.png"); /* The image used */
+  background-image: url("../meta_data/virus.png"); /* The image used */
   background-color: transparent; /* Used if the image is unavailable */
   height: 500px; /* You must set a specified height */
   background-position: center; /* Center the image */
